# palm-llm-eval-and-rag-service

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
docs/: ship_first_vs_later.md
eval_harness/: config.py  metrics.py  models.py  runner.py
eval_harness/test_sets/: default.json
rag_service/: compare_indexes.py  config.py  denylist.txt  guardrails.py  main.py  models.py  monitoring.py  retriever.py
rag_service/corpus/: snippets.json
results/: eval_report.json  eval_report_human.txt  index_comparison.txt  rag_guardrail_block.json  rag_health.json  rag_query.json  rag_query_k3_cosine.json
specs/001-llm-eval-rag-service/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-llm-eval-rag-service/checklists/: full-stack.md  requirements.md
specs/001-llm-eval-rag-service/contracts/: eval-cli.md  rag-api.md
tests/: test_eval_metrics.py  test_guardrails.py  test_rag_api.py  test_retriever.py
