[project]
name = "palm-llm-eval-and-rag-service"
version = "0.1.0"
description = "LLM evaluation harness and RAG answering service — Palm Outsourcing Senior AI Engineer trial task"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.4",
    "uvicorn==0.32.0",
    "pydantic==2.9.2",
    "scikit-learn==1.5.2",
    "numpy==2.1.1",
    "httpx==0.27.2",
    "python-dotenv==1.0.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
dev-dependencies = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
]
